--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite -d",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "emoji-picker-element": "^1.21.3",
     "emoji-picker-react": "^4.9.2",
+    "https": "^1.0.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.376.0",
     "react": "^18.2.0",
