--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "emoji-picker-element": "^1.21.3",
     "emoji-picker-react": "^4.9.2",
     "https": "^1.0.0",
